🎨 Style: Adjust layout for overflow issue

--- a/project1/css/main.css
+++ b/project1/css/main.css
@@ -8,14 +8,15 @@
     --h5-size: 20px;
     --h6-size: 10px;
        /* 큐브 공통 크기 */
-       --box-width: 210px;
+       --box-width: 200px;
        --box-height: 280px;
        /* z축 거리 */
        --z-size: 30vh;
 }
 
-body {
-    width: 100%;
+html, body {
+    width: 100vw !important;
+    overflow-x: hidden !important;
     margin: 0;
     padding: 0;
     color: #333;
@@ -63,7 +64,7 @@ a {
     }
 }
 header {
-    width: 100%;
+    width: 100vw;
     height: 50px;
     position: fixed;
     top: 0;
@@ -84,9 +85,9 @@ header {
 }
 .top_tab {
     display: flex;
-    /* justify-content: flex-end; */
     background-color: #fff;
     z-index: 9;
+    width: 100vw;
 }
 .top_tab ul {
     margin: 0;
@@ -97,17 +98,19 @@ header {
     font-weight: bold;
 }
 .top_tab .top_bar {
-    width: 250px;
+    justify-content: flex-end;
+    width: 40vw;
+
 }
 .top_tab .top_bar > li {
-    padding: 6.55%;
+    padding: 6%;
 }
 .top_tab .member {
-    width: 150px;
+    width: 30vw;
 }
 .top_tab .member > li {
-    margin: 5%;
-    padding: 6%;
+    margin: 1%;
+    padding: 1%;
     background-color: #333;
     color: #fff;
     border-radius: 100px;
@@ -125,7 +128,7 @@ header {
     height: 670px;
     margin-left: 10%;
     background: url(https://d3udu241ivsax2.cloudfront.net/v3/images/brand/main-bg.0c2e95bfd550759a46367d3abb3d05df.png)
-        no-repeat top right 20%/auto 70vh;
+        no-repeat top right 50%/50vw 70vh;
     
 }
 
